# merlin-ssg

./: .gitignore  README.md  meson.build
src/: main.vala
src/commands/: build.vala
